--- a/src/ckanext-Metadata/ckanext/Metadata/templates/user/new_user_form.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/user/new_user_form.html
@@ -32,7 +32,7 @@
 
   {% endblock %}
 </form>
-<div class="modal fade" id="showDataPublishModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index: -1">
+<div class="modal fade" id="showDataPublishModal"  role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index: -1">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -86,7 +86,7 @@
         </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
-<div class="modal fade" id="showDataUseModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index: -1">
+<div class="modal fade" id="showDataUseModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="z-index: -1">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
