--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/creator_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/creator_fields.html
@@ -36,7 +36,14 @@
             {% set creator_address_field =  "creators__%s__address" % loop.index0 %}
             {% set creator_organization_field =  "creators__%s__organization" % loop.index0 %}
             {%  set index = loop.index0 %}
-            <label>Creator</label>
+            <div id="delete_{{ loop.index0 }}_creator" style="white-space: nowrap">
+                <label style="display: inline">Creator</label>
+                <a id="btn_{{ loop.index0 }}_delete_creator" class="btn btn-danger" style="display: inline">
+                    <i class="icon-remove-circle"></i>
+                    Delete
+                </a>
+            </div>
+            <br>
             {{ form.input(creator_name_field, label=_('*Name'), id='field-creators-%d-name' % index, placeholder=_('Joe Bloggs'), value=creator_name, error=name_error, classes=['control-medium'], attrs={'title': 'FirstName LastName'}) }}
             {{ form.input(creator_email_field, label=_('Email'), id='field-creators-%d-email' % index, placeholder=_('jowb@gmail.com'), value=creator_email, error=email_error, classes=['control-medium'], attrs={'title': 'Email'}) }}
             {{ form.input(creator_phone_field, label=_('Phone'), id='field-creators-%d-phone' % index, placeholder=_('435-345-7890'), value=creator_phone, error=phone_error, classes=['control-medium'], attrs={'title': 'Phone'}) }}
@@ -47,12 +54,6 @@
 				   			type="hidden"
 				   			name="creators__{{ loop.index0 }}__delete"
 				   			value="{{ creator['delete'] }}" style="display: none">
-            <div id="delete_{{ loop.index0 }}_creator" style="display: inline">
-                <a id="btn_{{ loop.index0 }}_delete_creator" class="btn btn-danger" >
-                    <i class="icon-minus-sign"></i>
-                    Delete
-                </a>
-            </div>
         <hr>
         </div>
     {% endfor %}
