--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_basic_fields.html
@@ -1,5 +1,18 @@
 {% ckan_extends %}
 
+{% block package_basic_fields_url %}
+{% set prefix = h.url_for(controller='package', action='read', id='') %}
+{% set domain = h.url_for(controller='package', action='read', id='', qualified=true) %}
+{% set domain = domain|replace("http://", "")|replace("https://", "") %}
+{% set attrs = {'data-module': 'slug-preview-slug', 'data-module-prefix': domain, 'data-module-placeholder': '<dataset>'} %}
+
+    {% set name_error = [] %}
+    {%  if errors.name %}
+        {%  do name_error.append(errors.name[0] + ' Please modify your dataset title or URL.') %}
+    {% endif %}
+
+{{ form.prepend('name', id='field-name', label=_('URL'), prepend=prefix, placeholder=_('eg. my-dataset'), value=data.name, error=name_error, attrs=attrs) }}
+{% endblock %}
 
 {% block package_basic_fields_description %}
 {{ form.markdown('notes', id='field-notes', label=_('* Description'), placeholder=_('eg. Some useful notes about the data'), value=data.notes, error=errors.notes, attrs={'title' : 'Human-readable description (e.g., an abstract) with sufficient detail to enable a user to quickly understand whether the asset is of interest.'}) }}
